Additional Review Questions Chapter 17 Hard 17.22 Word Transformer - Use DFS to solve the problem